--- a/package.json
+++ b/package.json
@@ -41,9 +41,12 @@
     "@types/node": "18.16.9",
     "@typescript-eslint/utils": "^8.19.0",
     "angular-eslint": "^19.2.0",
-    "eslint": "^9.8.0",
+    "eslint": "^8.57.1",
     "eslint-config-prettier": "^10.0.0",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-playwright": "^1.6.2",
+    "eslint-plugin-rxjs": "^5.0.3",
+    "eslint-import-resolver-typescript": "^3.6.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-preset-angular": "~14.4.0",
