feat: Implement Material Design 3 styles and utilities
- Added custom SCSS files for Material Design 3 compliance, including overrides for Angular Material components, utility classes, responsive design, and custom scrollbar styles.
- Introduced a style audit tool to ensure adherence to MD3 guidelines, checking for proper usage of design tokens, color accessibility, and typography scale implementation.
- Established a comprehensive variable file for MD3 design tokens, including colors, typography, shapes, and elevation levels.
- Created a reset stylesheet to normalize styles across browsers and improve consistency.
- Developed a main styles entry point to import all partial styles in the correct order.

--- a/apps/performance-metrics/project.json
+++ b/apps/performance-metrics/project.json
@@ -85,6 +85,13 @@
         "staticFilePath": "dist/apps/performance-metrics/browser",
         "spa": true
       }
+    },
+    "lint-styles": {
+      "executor": "nx:run-commands",
+      "options": {
+        "cwd": "{workspaceRoot}",
+        "command": "stylelint \"{projectRoot}/src/**/*.scss\" --config .stylelintrc.json"
+      }
     }
   }
 }
