--- a/nx.json
+++ b/nx.json
@@ -31,6 +31,13 @@
         "{workspaceRoot}/eslint.config.mjs"
       ]
     },
+    "lint-styles": {
+      "cache": true,
+      "inputs": [
+        "default",
+        "{workspaceRoot}/.stylelintrc.json"
+      ]
+    },
     "@nx/jest:jest": {
       "cache": true,
       "inputs": ["default", "^production", "{workspaceRoot}/jest.preset.js"],
