feat: Enhance Material Component Platform with Angular and NestJS updates
- Updated Angular dependencies to version 19.2.x, including animations, CDK, and Material.
- Introduced new NestJS dependencies for improved backend functionality.
- Modified ESLint configuration to enforce new Angular rules and added custom linting for RxJS.
- Refactored application structure to utilize Angular's modular architecture, including updates to main.ts and app.module.
- Enhanced README with detailed usage instructions and CI/CD integration guidelines.
- Removed deprecated components and streamlined styles for better MD3 compliance.

--- a/nx.json
+++ b/nx.json
@@ -33,10 +33,7 @@
     },
     "lint-styles": {
       "cache": true,
-      "inputs": [
-        "default",
-        "{workspaceRoot}/.stylelintrc.json"
-      ]
+      "inputs": ["default", "{workspaceRoot}/.stylelintrc.json"]
     },
     "@nx/jest:jest": {
       "cache": true,
@@ -66,6 +63,16 @@
       "plugin": "@nx/eslint/plugin",
       "options": {
         "targetName": "lint"
+      }
+    },
+    {
+      "plugin": "@nx/webpack/plugin",
+      "options": {
+        "buildTargetName": "build",
+        "serveTargetName": "serve",
+        "previewTargetName": "preview",
+        "buildDepsTargetName": "build-deps",
+        "watchDepsTargetName": "watch-deps"
       }
     }
   ],
