--- a/package.json
+++ b/package.json
@@ -10,14 +10,33 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^19.2.6",
+    "@angular/cdk": "^19.2.9",
     "@angular/common": "~19.2.0",
     "@angular/compiler": "~19.2.0",
     "@angular/core": "~19.2.0",
     "@angular/forms": "~19.2.0",
+    "@angular/material": "^19.2.9",
     "@angular/platform-browser": "~19.2.0",
     "@angular/platform-browser-dynamic": "~19.2.0",
     "@angular/router": "~19.2.0",
+    "@material/material-color-utilities": "^0.3.0",
+    "@nestjs/common": "^10.0.2",
+    "@nestjs/config": "^4.0.2",
+    "@nestjs/core": "^10.0.2",
+    "@nestjs/platform-express": "^10.0.2",
+    "@nestjs/platform-socket.io": "^10.4.15",
+    "@nestjs/websockets": "^10.4.15",
+    "@types/d3": "^7.4.3",
+    "@types/socket.io": "^3.0.1",
+    "@types/socket.io-client": "^1.4.36",
+    "chart.js": "^4.4.8",
+    "d3": "^7.9.0",
+    "ng2-charts": "^8.0.0",
+    "reflect-metadata": "^0.1.13",
     "rxjs": "~7.8.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
@@ -28,14 +47,19 @@
     "@angular/compiler-cli": "~19.2.0",
     "@angular/language-service": "~19.2.0",
     "@eslint/js": "^9.8.0",
+    "@nestjs/schematics": "^10.0.1",
+    "@nestjs/testing": "^10.0.2",
     "@nx/angular": "20.7.2",
     "@nx/devkit": "20.7.2",
     "@nx/eslint": "20.7.2",
     "@nx/eslint-plugin": "20.7.2",
     "@nx/jest": "20.7.2",
     "@nx/js": "20.7.2",
+    "@nx/nest": "^20.7.2",
+    "@nx/node": "20.7.2",
     "@nx/playwright": "20.7.2",
     "@nx/web": "20.7.2",
+    "@nx/webpack": "20.7.2",
     "@nx/workspace": "20.7.2",
     "@playwright/test": "^1.36.0",
     "@schematics/angular": "~19.2.0",
@@ -46,28 +70,30 @@
     "@types/node": "18.16.9",
     "@typescript-eslint/utils": "^8.19.0",
     "angular-eslint": "^19.2.0",
+    "chalk": "^4.1.2",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^10.0.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-playwright": "^1.6.2",
     "eslint-plugin-rxjs": "^5.0.3",
-    "eslint-import-resolver-typescript": "^3.6.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
     "jest-preset-angular": "~14.4.0",
     "nx": "20.7.2",
     "prettier": "^2.6.2",
-    "ts-jest": "^29.1.0",
-    "ts-node": "10.9.1",
-    "tslib": "^2.3.0",
-    "typescript": "~5.7.2",
-    "typescript-eslint": "^8.19.0",
     "stylelint": "^15.10.0",
     "stylelint-config-prettier-scss": "^1.0.0",
     "stylelint-config-standard-scss": "^11.0.0",
     "stylelint-declaration-strict-value": "^1.9.2",
     "stylelint-order": "^6.0.3",
     "stylelint-scss": "^5.0.0",
-    "chalk": "^4.1.2"
+    "ts-jest": "^29.1.0",
+    "ts-node": "10.9.1",
+    "tslib": "^2.3.0",
+    "typescript": "~5.7.2",
+    "typescript-eslint": "^8.19.0",
+    "webpack-cli": "^5.1.4"
   }
 }
