--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
     "@nestjs/platform-socket.io": "^10.4.15",
+    "@nestjs/schedule": "^5.0.1",
     "@nestjs/websockets": "^10.4.15",
     "@types/d3": "^7.4.3",
     "@types/socket.io": "^3.0.1",
